<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="fragment"
            type="com.example.locationtrackingapp.fragment.SettingsAccountFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragment.RegistrationFragment">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar"
            app:navigationIcon="@{@drawable/ic_arrow_back_24}"
            app:title="@{@string/title_account_settings}" />

        <ImageView
            android:id="@+id/image_button_pick_image"
            android:layout_width="@dimen/image_pick_width"
            android:layout_height="@dimen/image_pick_height"
            android:layout_marginVertical="@dimen/default_margin_big"
            android:background="@drawable/round_corner"
            android:contentDescription="@string/content_desc_pick_image"
            android:onClick="@{() -> fragment.onImagePickClick()}"
            android:padding="@dimen/default_padding"
            android:src="@drawable/ic_add_a_photo_24"
            app:layout_constraintBottom_toTopOf="@id/edit_text_name_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            app:layout_constraintVertical_bias="0.1"
            app:layout_constraintVertical_chainStyle="packed" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edit_text_name_layout"
            style="@style/AppTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/default_margin_big"
            android:layout_marginVertical="@dimen/default_margin"
            android:hint="@string/hint_name"
            app:layout_constraintBottom_toTopOf="@id/edit_text_surname_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image_button_pick_image">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPersonName"
                android:padding="@dimen/default_padding"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edit_text_surname_layout"
            style="@style/AppTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/default_margin_big"
            android:layout_marginVertical="@dimen/default_margin_middle"
            android:hint="@string/hint_surname"
            app:layout_constraintBottom_toTopOf="@id/edit_text_username_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_text_name_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_surname"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPersonName"
                android:padding="@dimen/default_padding"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edit_text_username_layout"
            style="@style/AppTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/default_margin_big"
            android:layout_marginTop="@dimen/default_margin_big"
            android:layout_marginBottom="@dimen/default_margin_middle"
            android:hint="@string/hint_username"
            app:layout_constraintBottom_toTopOf="@id/edit_text_password_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_text_surname_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_username"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text"
                android:padding="@dimen/default_padding"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edit_text_password_layout"
            style="@style/AppTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/default_margin_big"
            android:layout_marginVertical="@dimen/default_margin_middle"
            android:hint="@string/hint_new_password"
            app:layout_constraintBottom_toTopOf="@id/edit_text_verify_password_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_text_username_layout"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"
                android:onFocusChange="@{() -> fragment.clearPasswordError()}"
                android:padding="@dimen/default_padding"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edit_text_verify_password_layout"
            style="@style/AppTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/default_margin_big"
            android:layout_marginVertical="@dimen/default_margin_middle"
            android:hint="@string/hint_verify_new_password"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_text_password_layout"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_verify_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"
                android:onFocusChange="@{() -> fragment.clearPasswordError()}"
                android:padding="@dimen/default_padding"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_save"
            style="@style/AppButton"
            android:layout_width="@dimen/btn_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin_big"
            android:onClick="@{() -> fragment.onSaveClick()}"
            android:text="@string/btn_text_save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_text_verify_password_layout" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>