<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="fragment"
            type="com.example.locationtrackingapp.fragment.LoginFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragment.LoginFragment">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar"
            app:title="@{@string/app_name}" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edit_text_username_layout"
            style="@style/AppTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/default_margin_big"
            android:layout_marginVertical="@dimen/default_margin"
            android:hint="@string/hint_username"
            app:errorEnabled="true"
            app:layout_constraintBottom_toTopOf="@id/edit_text_password_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            app:layout_constraintVertical_chainStyle="packed">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_username"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edit_text_password_layout"
            style="@style/AppTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/default_margin_big"
            android:layout_marginVertical="@dimen/default_margin"
            android:hint="@string/hint_password"
            app:errorEnabled="true"
            app:layout_constraintBottom_toTopOf="@id/btn_sign_in"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_text_username_layout"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"
                android:onFocusChange="@{() -> fragment.clearPasswordError()}"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_sign_in"
            style="@style/AppButton"
            android:layout_width="@dimen/btn_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin_big"
            android:onClick="@{() -> fragment.onSignInClick()}"
            android:text="@string/btn_text_sign_in"
            app:layout_constraintBottom_toTopOf="@id/btn_sign_up"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_text_password_layout" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_sign_up"
            style="@style/AppButtonOutlined"
            android:layout_width="@dimen/btn_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            android:onClick="@{() -> fragment.onSignUpClick()}"
            android:text="@string/btn_text_sign_up"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_sign_in" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>